--- a/next-page.html
+++ b/next-page.html
@@ -59,7 +59,8 @@
 		</select>
 		<input type="submit" class="submit" style="position: absolute;
 		top: 400px;
-		left: 600px;">
+		left: 600px;
+							   cursor: pointer;">
 		</form>
 		<p style="position: absolute; bottom: 0; left: 900px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 25px; color: rgba(26, 26, 26, 0.911); word-spacing: 10px; animation-name: note; animation-duration: 12s; animation-timing-function: ease-in-out; animation-iteration-count: infinite;"><strong>Note:</strong>Next part is coming soon.</p>
 	  </div>
